--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
+    "js-cookie": "^3.0.5",
     "next": "16.1.6",
     "prettier": "^3.8.1",
     "react": "19.2.3",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
